This file summarizes the major and interesting changes for each release.
For a detailed list of changes, please see ChangeLog.

0.18 (UNRELEASED):

 * Enhancements:
   - Can now import KeePass2 XML files
     (Thanks to Mathieu Trudel-Lapierre!) 

 * Bug fixes:

0.17 (2012-05-03):

 * Enhancements:
   - Add command-line option to specify default database

 * Bug fixes:
   - Don't save database specified on command line as default
   - Properly handle entries that have no URL specified (LP: #980608)
   - Fix logging in pasaffe-import scripts so we can debug failures
     (LP: #991143)
   - Correctly strip gpass database padding (LP: #991204)
   - Properly handle unicode characters with optparse (LP: #983210)

0.16 (2012-03-24):

 * Enhancements:
   - Updated translations

 * Bug fixes:
   - Fix right click context menu (LP: #945861)
   - Deactivate "Display secrets" button when not needed

0.15 (2012-03-22):

 * Enhancements:
   - Updated translations
   - Added KeePassX XML import script
   - Import scripts now warn about skipped fields

 * Bug fixes:
   - Give proper error when not specifying file to Figaro import script
   - Various cleanups
   - Properly handle utf-8 characters when importing Figaro xml file

0.14 (2012-02-29):

 * Enhancements:
   - Updated translations
   - Slightly improved appearance of main icon
   - Implemented search

 * Bug fixes:
   - Set proper window titles

0.13 (2012-02-14):

 * Enhancements:
   - Added random password generation
   - Lock now uses the main window to prevent a window from showing up
     on another workspace when the timeout occurs

 * Bug fixes:

0.12 (2012-02-04):

 * Enhancements:
   - Updated translations
   - Added a TODO item
   - Migrated to PyGObject and GSettings, thanks to Francesco Marella

 * Bug fixes (related to PyGObject and GSettings migration):
   - Get rid of traceback when quitting without a selection
   - Restore click on URL functionality
   - Fix initial size of notes field